# METIS

./: CMakeLists.txt  README.md
conf/: gkbuild.cmake
include/: metis.h
libmetis/: CMakeLists.txt
